--- a/report/main.tex
+++ b/report/main.tex
@@ -5,7 +5,7 @@
 \usepackage{bm}
 \usepackage{graphicx}
 
-% relative path to the folder containing all the images refered
+% relative path to the folder containing all the images referred
 \graphicspath{ {images/} }
 
 \title{Project Report}
